--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <% @messages.each do |message| %>
+      <div class="col-md-10 col-md-offset-1">
+        <div class="message">
+          <h2 class="message-title"><%= message.title %></h2>
+          <%= link_to 'Join Convo', message, class: 'btn-custom' %>
+        </div>
+      </div>
+    <% end %>
 
-</body>
+    <%= link_to 'Post Message', new_message_path, class: 'btn btn-default' %>
+  </body>
 </html>
